Fix display on small screens: the table of contents would overlap  the body. We now make sure the toc has its own space on the right (make): also copy the required images
git-svn-id: svn+ssh://svn.eu.adacore.com/Dev/trunk/gprbuild@126470 936e1b1b-40f2-da11-902a-00137254ae57

--- a/doc/gprbuild.css
+++ b/doc/gprbuild.css
@@ -4,8 +4,8 @@
    div.tip          {background-color:rgb(240,240,240);
                      margin: 0px 40px 0px 40px;
                      border-width: 1px 2px 2px 1px;
-                     border-top-style: dotted;
-                     border-left-style: dotted;
+                     border-top-style: ridge;
+                     border-left-style: ridge;
                      border-right-style: solid;
                      border-bottom-style: solid;
                      border-color: black;}
@@ -44,7 +44,10 @@
    div.contents a:visited,
    div.contents a:active            { text-decoration: none; color:blue }
    div.contents a:hover             { text-decoration: underline; color:red}
-   div.contents>ul>li               { padding-top: 20px; }
+
+   /* IE7 still does not support the > selectors... workaround */
+   div.contents ul li               { padding-top: 20px; }
+   div.contents ul li ul li         { padding-top: 0px; }
 
    h1.settitle      {background:#003580;
                      font-size: huge;
@@ -63,17 +66,15 @@
                      font-size: 14px;}
    body             {/*font-family: verdana,arial,helvetica,sans-serif;
                      font-size: 14px; */
+                     margin-left:10px; margin-right:305px;
                      text-align: justify}
    samp             {font-family: courier new,courier,fixed;
                      font-size: 14px}
 /* table of contents and tips in the right margin */
-   body             {width: 800px;
-                     margin-left: 20px }
-   div.contents     {left: 840px;
-                     top: 0px;
+   div.contents     {width:300px; top: 0px; right:0px; font-size:smaller;
                      position: absolute; }
+   div.contents ul  {padding-left:10px; margin:0}
    div.tip          {position: absolute;
                      text-align: left; /* don't align when width is small */
-                     width: 200px;
-                     left: 840px; }
+                     width: 200px; right:0px}
                     
